增加了Omnitrix Ultra AI